# raytracer

./: .gitignore  CMakeLists.txt  Camera.h  Color.cpp  Color.h  Intersection.h  Makefile  Material.cpp  Material.h  Pixel.h  Plane.h  Point2.cpp  Point2.h  Point3.cpp  Point3.h  Primitive.cpp  Primitive.h  Prop.h  README.md  Ray.h  Rectangle.h  Sample.cpp  Sample.h  Sampler.h  Scene.cpp  Scene.h  Sphere.h  Triangle.cpp  Triangle.h  Triplet.cpp  Triplet.h  Vector2.h  Vector3.cpp  Vector3.h  config  config.cpp  config.h  main.cpp  raytracer  raytracer.h  (+1 more)
include/: Camera.h  Color.h  Intersection.h  Material.h  Pixel.h  Plane.h  Point3.h  Prop.h  Ray.h  RenderOutput.h  Sample.h  Sampler.h  Scene.h  Sphere.h  Triangle.h  Vector2.h  Vector3.h  util.h
src/: Camera.cpp  Color.cpp  Intersection.cpp  Material.cpp  PNG.cpp  Plane.cpp  Point2.cpp  Point3.cpp  Ray.cpp  Sample.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp  Vector2.cpp  Vector3.cpp  main.cpp
